Fix z-index of asset-detail so its below modal

--- a/angular/src/app/components/asset-detail/asset-detail.component.styl
+++ b/angular/src/app/components/asset-detail/asset-detail.component.styl
@@ -10,7 +10,7 @@
       display flex
       align-items center
   position fixed
-  z-index 5000
+  z-index 900
   width 35%
   min-width 250px
   max-width 400px
